[gd_scene load_steps=5 format=3 uid="uid://vp6sfilokglx"]

[ext_resource type="Script" path="res://componets/Level_Devices/PressurePlates/PlayerPressurePlate.gd" id="1_1emwx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pq1wv"]
albedo_color = Color(0.615686, 0.329412, 0.227451, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_w4x0t"]
height = 0.25

[sub_resource type="CylinderShape3D" id="CylinderShape3D_nfito"]
height = 0.4
radius = 0.7

[node name="PlayerPressurePlate" type="Node3D"]
script = ExtResource("1_1emwx")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
use_collision = true
radius = 0.6
height = 0.1
material = SubResource("StandardMaterial3D_pq1wv")

[node name="CSGCylinder3D2" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0)
use_collision = true
radius = 0.7
height = 0.02
material = SubResource("StandardMaterial3D_pq1wv")

[node name="Activation" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Activation"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.125, 0)
shape = SubResource("CylinderShape3D_w4x0t")

[node name="CoolDownTimer" type="Timer" parent="."]
one_shot = true

[node name="Leaving" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Leaving"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
shape = SubResource("CylinderShape3D_nfito")

[connection signal="body_entered" from="Activation" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="CoolDownTimer" to="." method="_on_cool_down_timer_timeout"]
[connection signal="body_exited" from="Leaving" to="." method="_on_area_3d_body_exited"]
